# serializer version: 1
# name: TestUpdate.test
  dict({
    'id': 'fb085f7f',
    'name': 'Technicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'fcarpenter',
        'id': 'da42dca3',
      }),
      dict({
        'administrator': False,
        'handle': 'chelsea34',
        'id': '09d01419',
      }),
      dict({
        'administrator': False,
        'handle': 'michelle34',
        'id': 'f60bae36',
      }),
    ]),
  })
# ---
# name: TestUpdate.test_not_found[json]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_create[201][json]
  dict({
    'id': 'bf1b993c',
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_create[201][location]
  'https://virtool.example.com/groups/bf1b993c'
# ---
# name: test_create[400][json]
  dict({
    'id': 'bad_request',
    'message': 'Group already exists',
  })
# ---
# name: test_create[400][location]
  None
# ---
# name: test_find
  list([
    dict({
      'id': 'fb085f7f',
      'name': 'musicians',
    }),
    dict({
      'id': '7cf872dc',
      'name': 'hydrogeologists',
    }),
  ])
# ---
# name: test_get[200]
  dict({
    'id': 'fb085f7f',
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'qtaylor',
        'id': '3cbb22cc',
      }),
    ]),
  })
# ---
# name: test_get[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_remove[204][json]
  None
# ---
# name: test_remove[404][json]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
